Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">uritemplate</h1>
-        <p class="header">RFC 6570 parsing for Humans</p>
+        <p class="header">URI template parsing for Humans</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/sigmavirus24/uritemplate/zipball/master">Download ZIP</a></li>
